--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src --out-dir dist/ && node dist/index.js"
+    "build": "babel src --out-dir dist/ && node dist/index.js",
+    "serve": "babel src --out-dir dist/ && node dist/serve.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,8 @@
   },
   "homepage": "https://github.com/SpiderRam/udemy-graphql-intro#readme",
   "dependencies": {
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
     "graphql": "^14.6.0"
   },
   "devDependencies": {
